<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Norris Cards</string>
    <string name="bienvenido">Bienvenido a Norris Cards</string>
    <string name="email">Correo electrónico:</string>
    <string name="usuario">Nombre de usuario:</string>
    <string name="password">Contraseña:</string>
    <string name="repite_password">Repite la Contraseña:</string>
    <string name="ingresar">Ingresar</string>
    <string name="email_blank">Escribe tu correo electrónico.</string>
    <string name="usuario_blank">Ingresa tu nombre de usuario.</string>
    <string name="password_blank">Escribe tu contraseña.</string>
    <string name="connection_error">Error de conexión, por favor inténtalo mas tarde.</string>
    <string name="crear_partida">Crear nueva partida</string>
    <string name="buscar_partida">Buscar partidas abiertas</string>
    <string name="ver_barajas">Ver barajas</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_crear_partida">Crear partida</string>
    <string name="title_activity_buscar_partidas">Buscar partidas</string>
    <string name="title_activity_ver_baraja">Ver Barajas</string>
    <string name="registro">Registro</string>
    <string name="incorrects">Email o Contraseña incorrectos</string>
    <string name="pass_missmatch">Las contraseñas deben coincidir</string>
    <string name="email_missmatch">Tu correo no existe, regístrate!</string>
    <string name="seleccione_partida">Seleccione una partida para iniciar el juego</string>
    <string name="error_nopartidas">No hay partidas creadas</string>
    <string name="ingrese_crearpartida">Ingrese la info para crear partida</string>
    <string name="title_activity_inicio_partida">InicioPartidaActivity</string>
    <string name="numero_jugadores">Numero de jugadores</string>
    <string name="guardar">Guardar</string>
    <string name="espere_inicio_partida">Espere un momento mientras inicia la partida</string>
    <string name="forgot_pass">¿Olvidaste tu contraseña?</string>
    <string name="enviar">Enviar</string>
    <string name="reset_pass">Escribe y verifica tu nueva contraseña</string>
    <string name="agregarpartida_error">No fue posible agregarlo a la partida, por favor intente con otra</string>
</resources>