<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:background="@drawable/registro_480x640" >

    <Button
        android:id="@+id/back_btn"
        android:onClick="goBack"
        style="@style/back_btn" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="50dp" >
	    
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/email"
	        android:gravity="center_horizontal"
	        android:textSize="20dp"
	        android:layout_marginBottom="3dp"
	        android:textColor="#024102" />
        
        <EditText
            android:id="@+id/email_field"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal" />
	    
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/usuario"
	        android:gravity="center_horizontal"
	        android:textSize="20dp"
	        android:layout_marginBottom="3dp"
	        android:textColor="#024102" />
        
        <EditText 
            android:id="@+id/usuario_field"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
	        android:layout_marginBottom="5dp" />
	    
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/password"
	        android:gravity="center_horizontal"
	        android:textSize="20dp"
	        android:layout_marginBottom="3dp"
	        android:textColor="#024102" />
        
        <EditText 
            android:id="@+id/password_field"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
	        android:layout_marginBottom="5dp"
	        android:inputType="textPassword" />
	    
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/repite_password"
	        android:gravity="center_horizontal"
	        android:textSize="20dp"
	        android:layout_marginBottom="3dp"
	        android:textColor="#024102" />
        
        <EditText 
            android:id="@+id/verify_password_field"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
	        android:layout_marginBottom="5dp"
	        android:inputType="textPassword" />
        
        <Button 
            android:id="@+id/register_btn"
            android:onClick="validate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/registro"
            android:textSize="20dp" />
        
    </LinearLayout>

</LinearLayout>