<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingTop="15dp"
    android:background="@drawable/login_480x640" >
    
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:gravity="center"
	    android:padding="20dp" >
	    
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/email"
	        android:gravity="center_horizontal"
	        android:textSize="20dp"
	        android:layout_marginBottom="10dp"
	        android:textColor="#024102" />
        
        <EditText
            android:id="@+id/email_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="qwer@qwer.qq" />
	    
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/password"
	        android:gravity="center_horizontal"
	        android:textSize="20dp"
	        android:layout_marginBottom="10dp"
	        android:textColor="#024102" />
        
        <EditText
            android:id="@+id/password_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:inputType="textPassword"
            android:text="123456" />
        
        <Button 
            android:id="@+id/login_btn"
            android:onClick="validate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/ingresar"
            android:textSize="20dp" />
        
        <Button 
            android:id="@+id/register_btn"
            android:onClick="registro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/registro"
            android:textSize="20dp" />
        
    </LinearLayout>

</LinearLayout>