<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:background="@drawable/registro_480x640" >

    <Button
        android:id="@+id/back_btn"
        android:onClick="goBack"
        style="@style/back_btn" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="391dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="50dp" >
	    
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/forgot_pass"
	        android:gravity="center_horizontal"
	        android:textSize="20dp"
	        android:layout_marginBottom="30dp"
	        android:textColor="#024102" />
	    
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/email"
	        android:gravity="center_horizontal"
	        android:textSize="20dp"
	        android:layout_marginBottom="10dp"
	        android:textColor="#024102" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal" />
        
        <Button 
            android:id="@+id/forgot_pass_btn"
            android:onClick="validate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/enviar"
            android:textSize="20dp" />
        
    </LinearLayout>
    

</LinearLayout>