<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:background="@drawable/registro_480x640" >

    <Button
        android:id="@+id/back_btn"
        android:onClick="goBack"
        style="@style/back_btn" />
	
    <!-- Estadisticas -->
    <LinearLayout
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginLeft="9sp"
        android:layout_marginRight="10sp"
        android:orientation="vertical" 
        android:layout_gravity="center"
        android:background="@drawable/header_bg" >
		
		<TextView 
		    android:id="@+id/estadisticas_lbl" 
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
            android:gravity="center"
	        android:textColor="#ffffff" 
		    android:textSize="20dp"
            android:paddingTop="7sp"
            android:paddingBottom="7sp"
		    android:text="Estadísticas" />
		
		<LinearLayout 
		    android:id="@+id/estadisticas" 
		    android:visibility="gone" 
		    android:orientation="horizontal" 
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
        	android:padding="10dp"
        	android:background="@drawable/section" >
		        
	        <LinearLayout 
			    android:orientation="vertical" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
        		android:padding="5dp" >
	        
			    <ImageView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:src="@drawable/flags"
			        android:layout_weight="1"
			        android:layout_gravity="center" />
		
		  		<TextView  
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content"
		            android:gravity="center"
			        android:textColor="#024102" 
		            android:textSize="16dp"
				    android:text="Iniciadas"
			        android:layout_weight="1"
			        android:layout_gravity="center" />
	            
	        </LinearLayout>
        	
		    <LinearLayout 
			    android:orientation="vertical" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
        		android:padding="5dp" >
		        
			    <ImageView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:src="@drawable/trophy"
			        android:layout_gravity="center" />
		
		  		<TextView  
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content"
		            android:gravity="center"
			        android:textColor="#024102" 
		            android:textSize="16dp"
				    android:text="Ganadas"
			        android:layout_gravity="center" />
		        
		    </LinearLayout>
        	
		    <LinearLayout 
			    android:orientation="vertical" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
	        	android:layout_weight="1"
        		android:padding="5dp" >
		        
			    <ImageView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:src="@drawable/x"
			        android:layout_gravity="center" />
		
		  		<TextView  
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content"
		            android:gravity="center"
			        android:textColor="#024102" 
		            android:textSize="16dp"
				    android:text="Perdidas"
			        android:layout_gravity="center" />
		        
		    </LinearLayout>
		    
		</LinearLayout>
		
	</LinearLayout>
	
    <!-- Top 10 -->
    <LinearLayout
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginLeft="9sp"
        android:layout_marginRight="10sp" 
        android:orientation="vertical" 
        android:layout_gravity="center"
        android:background="@drawable/header_center_bg" >
		
  		<TextView  
		    android:id="@+id/top_10_lbl" 
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
            android:gravity="center"
	        android:textColor="#ffffff" 
            android:textSize="20dp"
            android:paddingTop="7sp"
            android:paddingBottom="7sp"
		    android:text="Top 10" />
  		
  		<LinearLayout 
		    android:id="@+id/top_10" 
		    android:visibility="gone" 
		    android:orientation="vertical" 
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
        	android:padding="5sp"
        	android:background="@drawable/section" >
   			
  		</LinearLayout>
  		
    </LinearLayout>
    
    <!-- Cambiar Contraseña -->
	<LinearLayout 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:orientation="vertical" 
		android:layout_gravity="center" 
        android:layout_marginLeft="9sp"
        android:layout_marginRight="10sp" 
        android:background="@drawable/header_center_bg" >
     
		<TextView
		    android:id="@+id/change_pass_lbl" 
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
            android:gravity="center"
	        android:textColor="#ffffff"
            android:textSize="20dp"
            android:paddingTop="7sp"
            android:paddingBottom="7sp"
		    android:text="Cambia tu contraseña" />
  	
		<LinearLayout 
		    android:id="@+id/change_pass" 
		    android:visibility="gone"  
		    android:orientation="vertical" 
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
        	android:padding="5sp"
        	android:background="@drawable/section" >
		    
	        <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/password"
		        android:gravity="center_horizontal"
		        android:textSize="20dp"
		        android:layout_marginBottom="3dp"
		        android:textColor="#024102" />
	        
	        <EditText 
	            android:id="@+id/password_field"
	            android:layout_width="fill_parent"
	            android:layout_height="40dp"
	            android:gravity="center_horizontal"
		        android:layout_marginBottom="5dp"
		        android:inputType="textPassword" />
		    
	        <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/repite_password"
		        android:gravity="center_horizontal"
		        android:textSize="20dp"
		        android:layout_marginBottom="3dp"
		        android:textColor="#024102" />
	        
	        <EditText 
	            android:id="@+id/verify_password_field"
	            android:layout_width="fill_parent"
	            android:layout_height="40dp"
	            android:gravity="center_horizontal"
		        android:layout_marginBottom="5dp"
		        android:inputType="textPassword" />
	        
	        <Button 
	            android:id="@+id/register_btn"
	            android:onClick="validate"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal"
	            android:text="@string/enviar"
	            android:textSize="20dp" />
		
		</LinearLayout>
		
	</LinearLayout>
    
    <!-- Cerrar Sesion -->
    <LinearLayout
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginLeft="9sp"
        android:layout_marginRight="10sp" 
        android:orientation="vertical" 
        android:layout_gravity="center"
        android:background="@drawable/header_bottom_bg" >
		
  		<TextView  
		    android:id="@+id/logout_lbl" 
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
            android:gravity="center"
	        android:textColor="#ffffff" 
            android:textSize="20dp"
            android:paddingTop="7sp"
            android:paddingBottom="7sp"
		    android:text="Cerrar Sesión" />
  		
    </LinearLayout>

 	<ListView 
 	    android:id="@android:id/list" 
 	    android:layout_width="fill_parent" 
 	    android:visibility="gone"
  		android:layout_height="340dip"  
  		android:drawSelectorOnTop="false"  
  		android:dividerHeight="0px"/>

</LinearLayout>